--- a/VIPER.workflow/Contents/Info.plist
+++ b/VIPER.workflow/Contents/Info.plist
@@ -8,11 +8,11 @@
 			<key>NSBackgroundColorName</key>
 			<string>background</string>
 			<key>NSIconName</key>
-			<string>NSActionTemplate</string>
+			<string>NSTouchBarAdd</string>
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>Create Folders Structure</string>
+				<string>VIPER</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
